Fix archive images not displaying fully on mobile

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,5 @@
 @import "variables";
 .index {
-	max-width: 80vw;
 	margin-right: auto;
 	margin-left: auto;
 	position: relative;
@@ -28,7 +27,9 @@
 	}
 }
 .search {
-	margin-bottom: 8px;
+	max-width: 300px;
+	display: block;
+	margin: 0 auto 8px;
   form { // Search form
   	position: relative;
     display: block;
@@ -101,6 +102,7 @@
 	display: none;
 }
 .table.gallery {
+	min-width: 320px;
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
